--- a/source/platform/compliance.html.slim
+++ b/source/platform/compliance.html.slim
@@ -122,11 +122,16 @@ section#compliance-hitrust.section-article
     .column
       svg.icon-tone.icon-size--large
         use.solid xlink:href="#icon-dashboard" 
-      h3.headline-4  Compliance Dashboard
-      p The compliance dashboard is home to all of your compliance data and reporting. The dashboard gives compliance admins incredible insight into their organization’s cloud environments.
+      h3.headline-4 Managed Compliance
+      p Datica leads the industry in both security and compliance management. Powered by the Datica Cloud Compliance Management System, Datica's managed compliance service includes:
       ul
-        li Run reports for HITRUST, GDPR, GxP and more.
-        li Manage your compliance tools in one place. We know compliance admins are not developers, that’s why we provide logging and monitoring data in a simple, usable format within the CCMS.
+        li Intrusion detection review and remediation.
+        li Vulnerability scanning management, remediation and proaction.
+        li Compliance reporting for HITRUST, SOC 2 and GDPR made available to all CCMS users.
+      / p The compliance dashboard is home to all of your compliance data and reporting. The dashboard gives compliance admins incredible insight into their organization’s cloud environments.
+      / ul
+      /   li Run reports for HITRUST, GDPR, GxP and more.
+      /   li Manage your compliance tools in one place. We know compliance admins are not developers, that’s why we provide logging and monitoring data in a simple, usable format within the CCMS.
 
   .row.align-center
     .columns.small-12.medium-6.large-4
