--- a/source/partials/section-promos/_hcms-screenshot.slim
+++ b/source/partials/section-promos/_hcms-screenshot.slim
@@ -1,7 +1,7 @@
 / this can be placed in a section with a background. 
 .row.align-center#platform-hcms
   .columns.small-12.text-center.group
-    = inline_svg("small/icon-hcms-shield-small", class: "icon-size--xlarge group svg-color--gray-3")
+    = inline_svg("small/icon-shield-small", class: "icon-size--xlarge group svg-color--gray-3")
     h2.headline-4.spaced-out Healthcare Compliance Management System
     h3.headline-2 Extending critical compliance controls
 .row.align-center.align-center
