--- a/source/platform/compliance.html.slim
+++ b/source/platform/compliance.html.slim
@@ -134,7 +134,7 @@ section#compliance-hitrust.section-article
       /   li Manage your compliance tools in one place. We know compliance admins are not developers, that’s why we provide logging and monitoring data in a simple, usable format within the CCMS.
 
   .row.align-center
-    .columns.small-12.medium-6.large-4
+    .columns.small-12.medium-8.large-5.xlarge-4
       .card.container-color--light-shimmer
         = partial("partials/ctas/card-schedule-demo")
 
