--- a/source/platform/index.html.slim
+++ b/source/platform/index.html.slim
@@ -69,19 +69,23 @@ section#setup.section-article.container-gray-12
           p.lead Datica automatically configures your underlying infrastructure, installs and configures a highly available Kubernetes cluster, and connects that cluster to Datica’s Cloud Compliance Management System — all in 10 minutes.
       .row.align-center.small-up-1.medium-up-2.large-up-4.group
         .column
-          img.pad src="https://images.ctfassets.net/189dvqdsjh46/yc639CSDwka8aAs4Uo0kW/cb3458e6089ae9bd7312389acc374f9b/setup-1.png?w=450" alt="Setup"
+          h4.headline-4.hide-for-medium 1. Setup
+          img.pad.show-for-medium src="https://images.ctfassets.net/189dvqdsjh46/yc639CSDwka8aAs4Uo0kW/cb3458e6089ae9bd7312389acc374f9b/setup-1.png?w=450" alt="Setup"
           p First we collect information about your cloud provider, required infrastructure to run your deployments, and how redundant you want the master cluster to be (HA by default).
         .column
-          img.pad src="https://images.ctfassets.net/189dvqdsjh46/4jQ7VNUSIMUIS2aIKQWEOO/bb83fc6ec264ddd12f3b29410fe784c0/setup-2.png?w=450" alt="Installation"
+          h4.headline-4.hide-for-medium 2. Installation
+          img.pad.show-for-medium src="https://images.ctfassets.net/189dvqdsjh46/4jQ7VNUSIMUIS2aIKQWEOO/bb83fc6ec264ddd12f3b29410fe784c0/setup-2.png?w=450" alt="Installation"
           p With the required information, Datica installs a new Kubernetes cluster into your account (or into Datica’s account, your choice).
         .column
-          img.pad src="https://images.ctfassets.net/189dvqdsjh46/3MKy2SJ2dWUQIWy8yKEK4C/85c4531dfb35b5a9a6c008939ede8f74/setup-3.png?w=450" alt="Verification"
+          h4.headline-4.hide-for-medium 3. Verification
+          img.pad.show-for-medium src="https://images.ctfassets.net/189dvqdsjh46/3MKy2SJ2dWUQIWy8yKEK4C/85c4531dfb35b5a9a6c008939ede8f74/setup-3.png?w=450" alt="Verification"
           p Once the cluster is installed, and all system-level configurations are set, the Platform will begin continuously pulling the cluster’s running state and compare that to the required compliance state.
         .column
-          img.pad src="https://images.ctfassets.net/189dvqdsjh46/4GOXaSvKfu6SeaMmmw2k6i/241b016e86591f5b871a192c4583b48e/setup-4.png?w=450" alt="Done!"
+          h4.headline-4.hide-for-medium 4. Done!
+          img.pad.show-for-medium src="https://images.ctfassets.net/189dvqdsjh46/4GOXaSvKfu6SeaMmmw2k6i/241b016e86591f5b871a192c4583b48e/setup-4.png?w=450" alt="Done!"
           p Start shipping! Your newly deployed Kubernetes cluster is ready for use. Scale and manage infrastructure at will. The Datica Compliance Management System has your back.
       .row.align-center
-        .columns.small-12.medium-8.large-5
+        .columns.small-12.medium-8.large-5.xlarge-4
           .card.drop
             = partial("partials/ctas/card-schedule-demo")
 
