Episode 4: A New Ribbon

--- a/source/partials/head/_header.slim
+++ b/source/partials/head/_header.slim
@@ -21,6 +21,7 @@ css:
     display: none;
   }
 = partial "assets/icons/inlined/datica-logo-horiz-symbol.svg"
+= partial "partials/snippets/alert-ribbon"
 
 header.main-header
   nav.nav.nav-mobile.hide-for-large
