new contact/azure page; Build Conf ribbon promo  at top.

--- a/source/assets/scss/modules/utility.scss
+++ b/source/assets/scss/modules/utility.scss
@@ -19,8 +19,9 @@
 }
 .faded-max {
     @extend .faded;
+    transition-duration: $timing-slow;
     @include breakpoint (large) {
-        @include opacity(0.1);
+        @include opacity(0.2);
     }
 }
 .drop { // drop shadows. Tried to use mixin & had issues with sass functions.
