--- a/source/partials/snippets/_alert-ribbon.slim
+++ b/source/partials/snippets/_alert-ribbon.slim
@@ -8,7 +8,7 @@
 
 
 aside id="alertTop" class="hide full-width container-gray-1 alert-ribbon text-center" data-closable=""
-  a(href="/learn-more/azure" title="Learn more about Kubernetes on Azure")
+  a.dismiss(href="/contact/azure" title="Learn more about Kubernetes on Azure")
     img class="logo-size--medium" src="https://images.ctfassets.net/189dvqdsjh46/3DFwFliXnWIsUeCIAiMmom/3303a25db19147c57470cfbb0dfeeb6e/build-18-promo-ribbon.png" /
   .row.align-center
     button class="alert-ribbon--action dismiss close-button button--inverted" aria-label="Dismiss alert" type="button" data-close="" title="No thanks"
