--- a/source/podcast/index.html.erb
+++ b/source/podcast/index.html.erb
@@ -2,7 +2,7 @@
 title: "Healthcare Innovators Podcast from Datica"
 summary: "How does healthcare innovate? Datica explores this topic in a new series of interviews with several of the industry's top thinkers and doers. Follow along with us as we uncover insights to catalyzing change in healthcare."
 author: "Datica, Inc."
-tags: "HIPAA, HL7, FHIR, interoperability, EHR, integration"
+tags: "HIPAA, HL7, FHIR, interoperability, EHR, Kubernetes"
 date: "January 1, 2017"
 share_image: "https://images.ctfassets.net/189dvqdsjh46/at0B5zJqmIk8EAoKqgQww/bc7605c8d6702518cedcedf7cf0de3bb/podcast-art-share-2018.png"
 header: "The Healthcare Innovators Podcast"
