--- a/source/404.html.erb
+++ b/source/404.html.erb
@@ -21,43 +21,5 @@ bgImage: "//images.ctfassets.net/189dvqdsjh46/4YMziFy6JGi6iKwsskImEG/1074c45f366
             <a href="/" class="button hollow large hollow-inverted">Go Home</a>
         </div>
     </div>
-    <div class="row align-center">
-        <div class="columns small-12 large-9">
-            <h3 class="headline-3 text-spaced text-center group">Recent Blog Posts</h3>
-        </div>
-    </div>
-    <div class="masonry-group">
-        <% sorted_posts = data.site.blog.to_a.sort_by{ |id, post| post['pub_date'] }.reverse! %>
-        <% sorted_posts[0...4].each do | id, post | %>
-            <aside class="masonry-group--item">
-                <div class="card card--hover drop container-gray-12">
-                    <% if post.has_key?("featured_image") %>
-                        <a class="" href="/blog/<%= post["slug"] %>" title="Read this blog post">
-                            <img class="card-img" src="<%= post["featured_image"]["url"] %>?fit=thumb&w=400&h=200&q=55" alt="Image: <%= post["title"] %>" />
-                        </a>
-                    <% end %>
-                    <div class="card-section">
-
-                        <h3 class="headline-4">
-                            <a class="" href="/blog/<%= post["slug"] %>" title="Read this blog post"><%= post["title"] %></a>
-                        </h3>
-                        <% if post["author"].has_key?("profile_pic") %>
-                            <%= partial("partials/snippets/person-small", :locals => { :p => post["author"] }) %>
-                        <% end %>
-                        <% if post.has_key?("pub_date") %>
-                            <div class="text-tiny"><i class="fa fa-calendar" aria-hidden="true"></i> <%= post['pub_date'].strftime('%B %-d, %Y') %> &nbsp;</div>
-                        <% end %>
-                        <% if post.has_key?("summary") || post["summary"] == "" %>
-                            <p><%= post["summary"] %></p>
-                            <%#= Kramdown::Document.new(post["summary"]).to_html %>
-                        <% else %>
-                            <% if post.has_key?("blog_lead") %>
-                                <%= Kramdown::Document.new(post["blog_lead"]).to_html %>
-                            <% end %>
-                        <% end %>
-                    </div>
-                </div>
-            </aside>
-        <% end %>
-    </div>
+    <%= partial "partials/content/recent-items" %>
 </section>
