--- a/source/contact/index.html.erb
+++ b/source/contact/index.html.erb
@@ -2,8 +2,7 @@
 title: "Contact Us"
 summary: "Connect with a compliance or integration expert at Datica"
 author: "Datica, Inc."
-tags: "HIPAA, HL7, FHIR, interoperability, EHR, integration"
-date: "January 1, 2017"
+tags: "HIPAA, HL7, FHIR, interoperability, EHR, Kubernetes"
 customJS: "/public/js/form.js"
 layout: basic
 ---
@@ -11,42 +10,39 @@ layout: basic
 <% 
 current_page.data.share_image = image_share_platform
 current_page.data.date = DateTime.now.strftime('%B %-d, %Y')
+the_form = data.site.forms['6REeio0W88ac0o0GOsMs8U']
+the_quote = data.site.quotes['566EA4HZFumwUQQ6asKQYw']
 %>
-<div class="container-color--blue-alt">
+
+<div class="container-color--dark-grad-blue">
     <%= partial "partials/head/header", :locals => { :style => "light" } %>
     <div class="section-article">
         <div class="row">
             <div class="columns small-12 medium-6">
-                <div class="section--header-dark-group">
-                    <h1 class="headline-1">Connect with us</h1>
-                </div>
+                <h1 class="headline-1">Connect with Datica</h1>
             </div>
             <div class="columns small-12 medium-6 position-relative split-section-form">
                 <div class="callout callout--large drop" id="absoluteForm">
                     <p>A compliance and integration expert from Datica will follow up to learn how we might be able to help.</p>
                     <hr/>
-                    <%= partial("partials/snippets/form-hubspot", :locals => { :form_id => "2904bae4-9c64-4ed7-95a5-9af6ae6af302" }) %>
+                    <%= Kramdown::Document.new(the_form["custom_form"]).to_html %>
                 </div>
             </div>
         </div>
     </div>
 </div>
+<div class="strip-bright"></div>
 <div class="section-article container-color--gray-light" id="setHeight">
     <div class="row">
         <div class="columns small-12 medium-6 text-left small-order-2 large-order-1">
             <div class="callout drop group">
-                <blockquote class="quote--serif">Datica helps me remain agile as healthcare is pressured to change to value based, consumer-focused care. They are an invaluable partner.”
+                <blockquote class="quote--serif">
+                    <%= Kramdown::Document.new(the_quote["quote_body"]).to_html %>
                 </blockquote>
-                <div class="media-object card-person">
-                    <div class="media-object-section">
-                        <img src="https://images.ctfassets.net/189dvqdsjh46/5OFA1wUZqgKWMKOU2C0IEO/42c8b04cff24c4a65d56e63244c76cbe/roebuck-and-petit.jpg<%= image_thumb %>" class="avatar avatar--large circle" alt="Dr. Michael Roebuck" />
-                    </div>
-                    <div class="media-object-section main-section align-self-middle">
-                        <h4 class="person-name">Dr. Michael Roebuck</h4>
-                        <p class="person-title">CMIO, Hurley Medical Center</p>
-                    </div>
-                </div>
+                <%= partial("partials/snippets/person", :locals => { :p => the_quote. customer, :company => the_quote.customer.company_name } ) %>
+
             </div>
         </div>
     </div>
 </div>
+
