--- a/source/contact/thanks.html.erb
+++ b/source/contact/thanks.html.erb
@@ -2,35 +2,42 @@
 title: "Thanks for reaching out"
 summary: "A member of the Datica team will be following up"
 author: "Datica, Inc."
-tags: "HIPAA, HL7, FHIR, interoperability, EHR, integration"
-date: "January 1, 2017"
+tags: "HIPAA, HL7, FHIR, interoperability, EHR, Kubernetes"
+# date: "January 1, 2017"
 share_image: "https://images.ctfassets.net/189dvqdsjh46/3Ll0a3gLi8wKG8A84mUokm/fabae03bd9e4da4e60173d4c2fe89a30/blog-share-default.png"
-customCSS: "contact-us"
+# customCSS: "contact-us"
 layout: basic
 ---
-<div class="container-color--blue-alt">
+<div class="container-color--dark-grad-blue">
     <%= partial "partials/head/header", :locals => { :style => "light" } %>
-    <div class="section-article">
+    <section class="section-article">
         <div class="row align-center">
-            <div class="columns small-12 medium-6">
+            <div class="columns small-12 medium-6 large-6">
                 <div class="section--header-dark-group">
-                    <h1>Thanks for reaching out</h1>
-                    <h2>A member of the Datica team will be following up to schedule a conversation</h2>
+                    <h1 class="headline-2">Thanks for reaching out</h1>
+                    <p class="lead">A member of the Datica team will be following up to schedule a conversation.</p>
                 </div>
             </div>
-            <div class="columns small-12 medium-6">
-                <div class="drop callout">
-                    <a class="read-more" href="/about" title="Learn more">About Datica <i class="fa fa-angle-right"></i></a>
-                    <br>
-                    <a class="read-more" href="/blog" title="Learn more">Company blog <i class="fa fa-angle-right"></i></a>
-                    <br>
-                    <a class="read-more" href="/innovation" title="Learn more">Healthcare Innovators Podcast <i class="fa fa-angle-right"></i></a>
-                    <br>
-                    <a class="read-more" href="https://datica.com/open-source/policies" title="Learn more">Our open sourced company policies on GitHub <i class="fa fa-angle-right"></i></a>
-                    <br>
-                    <a class="read-more" href="https://help.datica.com" title="Learn more">Customer support channels <i class="fa fa-angle-right"></i></a>
+            <div class="columns small-12 medium-6 large-4">
+                <div class="card container-gray-10">
+                    <div class="card-section">
+                        <h4 class="headline-4 spaced-out">Next Up:</h4>
+                        <ul class="no-bullet">
+                            <li><a class="" href="/about" title="Learn more">About Datica <i class="fa fa-angle-right"></i></a></li>
+                            <li><a class="" href="/blog" title="Learn more">Company blog <i class="fa fa-angle-right"></i></a></li>
+                            <li><a class="" href="/innovation" title="Learn more">Healthcare Innovators Podcast <i class="fa fa-angle-right"></i></a></li>
+                            <li><a class="" href="https://datica.com/open-source/policies" title="Learn more">Our open sourced company policies on GitHub <i class="fa fa-angle-right"></i></a></li>
+                            <li><a class="" href="https://help.datica.com" title="Learn more">Customer support channels <i class="fa fa-angle-right"></i></a></li>
+                        </ul>
+                    </div>
                 </div>
             </div>
         </div>
-    </div>
+    </section>
 </div>
+<div class="strip-bright"></div>
+<section class="section-article container-gray-11">
+    <div class="row">
+        <%= partial "partials/content/recent-items" %>
+    </div>
+</section>
