--- a/source/demo/index.html.erb
+++ b/source/demo/index.html.erb
@@ -2,7 +2,7 @@
 title: "Schedule Demo"
 summary: "Connect with a Datica expert to see a Demo of the Platform"
 author: "Datica, Inc."
-tags: "HIPAA, HL7, FHIR, interoperability, EHR, integration"
+tags: "HIPAA, HL7, FHIR, interoperability, EHR, Kubernetes"
 date: "January 1, 2017"
 share_image: "https://images.ctfassets.net/189dvqdsjh46/3Ll0a3gLi8wKG8A84mUokm/fabae03bd9e4da4e60173d4c2fe89a30/blog-share-default.png"
 customJS: "/public/js/form.js"
