--- a/source/innovation/index.html.erb
+++ b/source/innovation/index.html.erb
@@ -2,7 +2,7 @@
 title: "Datica Innovation"
 summary: "How does healthcare innovate? Datica explores this topic through new series of interviews with several of the industry's top thinkers and doers. Follow along with us as we uncover insights to catalyzing change in healthcare."
 author: "Datica, Inc."
-tags: "HIPAA, HL7, FHIR, interoperability, EHR, integration"
+tags: "HIPAA, HL7, FHIR, interoperability, EHR, Kubernetes"
 date: "January 1, 2017"
 header: "Datica Innovation"
 subheader: "How does healthcare innovate? Datica explores this topic in a new series of interviews with the industry's top thinkers and doers. Follow along with us as we uncover insights to catalyzing change in healthcare."
