--- a/source/platform/compliance.html.slim
+++ b/source/platform/compliance.html.slim
@@ -109,13 +109,13 @@ section#compliance-hitrust.section-article
       p Once your Kubernetes cluster is installed and configured, Datica will store compliance artifact data.
       ul
         li Our logging stack ties directly into the compliance artifact storage.
-        li Certain compliance data must be relayed back to Datica’s centrally managed Healthcare Compliance Management System for processing.
-        li The Compliance Artifact Storage mechanism is the lifeblood of the Healthcare Compliance Management System.
+        li Certain compliance data must be relayed back to Datica’s centrally managed Cloud Compliance Management System for processing.
+        li The Compliance Artifact Storage mechanism is the lifeblood of the Cloud Compliance Management System.
     .column
       svg.icon-tone.icon-size--large
         use.solid xlink:href="#state-box" 
       h3.headline-4 Continuous Compliance Engine
-      p The core value of the Datica Healthcare Compliance Management System is that we are continuously ensuring the complete compliance of both your cluster, and the underlying infrastructure that it resides on.
+      p The core value of the Datica Cloud Compliance Management System is that we are continuously ensuring the complete compliance of both your cluster, and the underlying infrastructure that it resides on.
       ul
         li We do this by comparing the running state with the expected compliance state.
         li When anomalies and events are detected, a Datica Security and Compliance expert will review the logs and take necessary steps.
