--- a/source/partials/section-promos/_hcms-screenshot.slim
+++ b/source/partials/section-promos/_hcms-screenshot.slim
@@ -2,7 +2,7 @@
 .row.align-center#platform-hcms
   .columns.small-12.text-center.group
     = inline_svg("small/icon-shield-small", class: "icon-size--xlarge group svg-color--gray-3")
-    h2.headline-4.spaced-out Healthcare Compliance Management System
+    h2.headline-4.spaced-out Cloud Compliance Management System
     h3.headline-2 Extending critical compliance controls
 .row.align-center.align-center
   .columns.small-12.large-10
