Platform/product updates, visual tweaks

--- a/source/assets/scss/modules/fonts.scss
+++ b/source/assets/scss/modules/fonts.scss
@@ -8,15 +8,17 @@
 // omitting the lightest (100) and heaviest (900) weights. Uncomment to restore & use. - AW
 
 // GT America Font family
+$fam: GT America;
+
 // @font-face{
 //     src: url('/public/fonts/gt-america-ultralight.woff') format('woff');
-//     font-family: GT-America-ultra-light;
+//     font-family: $fam;
 // font-display: optional;
 //     font-weight: 100;
 // }
 // @font-face{
 //     src: url('/public/fonts/gt-america-ultralightitalic.woff') format('woff');
-//     font-family: GT-America;
+//     font-family: $fam;
 // font-display: optional;
 //     font-weight: 100;
 //     font-style: italic;
@@ -24,13 +26,13 @@
 
 // @font-face{
 //     src: url('/public/fonts/gt-america-thin.woff') format('woff');
-//     font-family: GT-America;
+//     font-family: $fam;
 // font-display: optional;
 //     font-weight: 200;
 // }
 // @font-face{
 //     src: url('/public/fonts/gt-america-thinitalic.woff') format('woff');
-//     font-family: GT-America;
+//     font-family: $fam;
 // font-display: optional;
 //     font-weight: 200;
 //     font-style: italic;
@@ -38,13 +40,13 @@
 
 @font-face{
     src: url('/public/fonts/gt-america-light.woff') format('woff');
-    font-family: GT-America;
+    font-family: $fam;
     font-display: optional;
     font-weight: 300;
 }
 @font-face{
     src: url('/public/fonts/gt-america-lightitalic.woff') format('woff');
-    font-family: GT-America;
+    font-family: $fam;
     font-display: optional;
     font-weight: 300;
     font-style: italic;
@@ -52,13 +54,13 @@
 
 @font-face{
     src: url('/public/fonts/gt-america-regular.woff') format('woff');
-    font-family: GT-America;
+    font-family: $fam;
     font-display: optional;
     font-weight: 400;
 }
 @font-face{
     src: url('/public/fonts/gt-america-regularitalic.woff') format('woff');
-    font-family: GT-America;
+    font-family: $fam;
     font-display: optional;
     font-weight: 400;
     font-style: italic;
@@ -66,13 +68,13 @@
 
 @font-face{
     src: url('/public/fonts/gt-america-medium.woff') format('woff');
-    font-family: GT-America;
+    font-family: $fam;
     font-display: optional;
     font-weight: 500;
 }
 @font-face{
     src: url('/public/fonts/gt-america-mediumitalic.woff') format('woff');
-    font-family: GT-America;
+    font-family: $fam;
     font-display: optional;
     font-weight: 500;
     font-style: italic;
@@ -80,17 +82,31 @@
 
 @font-face{
     src: url('/public/fonts/gt-america-bold.woff') format('woff');
-    font-family: GT-America;
+    font-family: $fam;
     font-display: optional;
     font-weight: 700;
 }
 @font-face{
     src: url('/public/fonts/gt-america-bolditalic.woff') format('woff');
-    font-family: GT-America;
+    font-family: $fam;
     font-display: optional;
     font-weight: 700;
     font-style: italic;
 }
+
+// @font-face{
+//     src: url('/public/fonts/gt-america-black.woff') format('woff');
+//     font-family: $fam;
+// font-display: optional;
+//     font-weight: 900;
+// }
+// @font-face{
+//     src: url('/public/fonts/gt-america-blackitalic.woff') format('woff');
+//     font-family: $fam;
+// font-display: optional;
+//     font-weight: 900;
+//     font-style: italic;
+// }
 
 // serif fonts - used in quotes, DSHF copy. Source Serif Pro is still in development, with no italics; Charter is a very close subsitute.
 
@@ -109,17 +125,3 @@
     font-weight: 400;
     font-style: italic;
 }
-
-// @font-face{
-//     src: url('/public/fonts/gt-america-black.woff') format('woff');
-//     font-family: GT-America;
-// font-display: optional;
-//     font-weight: 900;
-// }
-// @font-face{
-//     src: url('/public/fonts/gt-america-blackitalic.woff') format('woff');
-//     font-family: GT-America;
-// font-display: optional;
-//     font-weight: 900;
-//     font-style: italic;
-// }
