--- a/source/assets/scss/settings.scss
+++ b/source/assets/scss/settings.scss
@@ -69,7 +69,7 @@
 
 // Helpers
 $font_backup:  -apple-system, BlinkMacSystemFont, "Roboto", sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
-$font_sans:    "GT-America", $font_backup;
+$font_sans:    "GT America", $font_backup;
 $font_serif:   "Source Serif Pro", Georgia, serif;
 
 // Font Weights                    // GT America Mapping; omitting ones that aren't loaded. Can be restored and loaded in fonts.scss.
