--- a/source/assets/scss/views/platform.scss
+++ b/source/assets/scss/views/platform.scss
@@ -67,11 +67,16 @@ $color: $color_blue;
 //     }
 // }
 
-// Set max height on "building on the paltform" illustrations
-// .build-height{
-//   max-height: 155px;
-// }
-
+.card-add-feature { // special button on roadmap
+    &:hover {
+        .link-white {text-decoration: none;}
+        transition: color $timing-slow linear;
+        .icon {
+            transition: color $timing-slow linear;
+            color: white;
+        }
+    }
+}
 // Add a border to the bottom of the "How the Platform Works" images
 img.soft-border{
   border-bottom: 1px solid $color_light;
