--- a/source/platform/roadmap.html.slim
+++ b/source/platform/roadmap.html.slim
@@ -31,7 +31,7 @@ section#tech-features.section-article.container-gray-11
           p.text-center Here's what's coming.
   ruby:
     feature_list = data.site.features.to_a.sort_by{ |id, feature| feature['_meta']['updated_at'] }
-    feature_states = ["In Development", "On Deck", "Future"]
+    feature_states = ["In Development", "On Deck", "Future"] # hard-coded list must match one in Contentful model
   .row.align-center.small-up-1.medium-up-3.large-up-3
     - feature_states.each do | state |
       .column
@@ -58,9 +58,20 @@ section#tech-features.section-article.container-gray-11
                       = Kramdown::Document.new(feature.desc).to_html
                 - if feature.has_key?("related_tags")
                   .card-divider.card-divider--flush
+                    span.text--gray-9
+                      = inline_svg("small/icon-tag", class: "icon-inline")
+                      | &nbsp;
                     - feature["related_tags"].each do |tag|
                       - if tag.has_key?("tag_full")
-                        span.label.info.round = tag["tag_full"]
+                        // create this map for any colors wanted for tags. current list - settings.scss:198
+                        - tag_color = case tag.slug
+                        - when "kubernetes" then "primary"
+                        - when "add-ons" then "info"
+                        - when "foo" then "success"
+                        - when "bar" then "warning"
+                        - when "baz" then "info"
+                        - else "dark"
+                        span.label.round class=tag_color = tag.slug
   .row.small-up-1.medium-up-3.large-up-3
     .column
       a.card.group.card-add-feature.container-gray-5
