Some metadata stuff, page naming.

--- a/source/platform/features.html.slim
+++ b/source/platform/features.html.slim
@@ -1,9 +1,9 @@
 ---
-title: "Datica Technology Platform"
-summary: "Technology capabilities and support on the Datica Platform"
-navTitle: "Technology"
+title: "Datica Features"
+summary: "Datica technology, features, capabilities, and support on the Datica Platform"
+navTitle: "Features"
 author: "Datica, Inc."
-tags: "compliance, HIPAA, HL7, FHIR, interoperability, EHR, integration"
+tags: "compliance, HIPAA, HL7, FHIR, interoperability, EHR, Kubernetes"
 date: "March 5, 2018"
 ogType: "product"
 customCSS: "platform"
