--- a/source/platform/index.html.slim
+++ b/source/platform/index.html.slim
@@ -3,7 +3,7 @@ title: "Datica Platform for Compliance in the Cloud"
 summary: "Datica bridges security, compliance and your favorite technologies together to offer a complete, enterprise cloud solution for regulated industries."
 navTitle: "Platform Overview"
 author: "Datica, Inc."
-tags: "compliance, HIPAA, HL7, FHIR, interoperability, EHR, integration"
+tags: "compliance, HIPAA, HL7, FHIR, interoperability, EHR, Kubernetes"
 date: "March 5, 2018"
 ogType: "product"
 customCSS: "platform"
