--- a/source/platform/roadmap.html.slim
+++ b/source/platform/roadmap.html.slim
@@ -13,7 +13,12 @@ collectionName: "platform"
 collectionOrder: 3
 ctaCustom: true
 ---
-- current_page.data.share_image = image_share_platform
+ruby:
+  current_page.data.share_image = image_share_platform
+  current_page.data.date = DateTime.now.strftime('%B %-d, %Y')
+  feature_list = data.site.features.to_a.sort_by{ |id, feature| feature['_meta']['updated_at'] }
+  feature_states = ["In Development", "On Deck", "Future"] # hard-coded list must match one in Contentful model
+  form_id = '6cpdQDL5S06YmySAKIamom'
 
 svg aria-hidden="true" data-name="chevron" style=("position: absolute; width: 0; height: 0; overflow: hidden;") xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink"
   defs
@@ -21,7 +26,6 @@ svg aria-hidden="true" data-name="chevron" style=("position: absolute; width: 0;
       title chevron-down
       path d=("M4.29 5.19L2.83 6.64 9 12.81l6.17-6.17-1.46-1.45L9 9.9z")
 
-/section#tech-features.section-article.container-gray-11.container-image--fixed(data-interchange="[https://images.ctfassets.net/189dvqdsjh46/31Xr7kD9GUu8gYo6IOISac/b72aedc4ed520f1ad4ae78a24109838f/bg-weave-light.png?w=2200&h=1000&fm=jpg, medium]")
 section#tech-features.section-article.container-gray-11
   .row.align-center
     .columns.small-12.text-center.group
@@ -29,9 +33,7 @@ section#tech-features.section-article.container-gray-11
         .columns.small-12.medium-8
           h1.headline-2.text-center = current_page.data.title
           p.text-center Here's what's coming.
-  ruby:
-    feature_list = data.site.features.to_a.sort_by{ |id, feature| feature['_meta']['updated_at'] }
-    feature_states = ["In Development", "On Deck", "Future"] # hard-coded list must match one in Contentful model
+          / p= the_form.title
   .row.align-center.small-up-1.medium-up-3.large-up-3
     - feature_states.each do | state |
       .column
@@ -102,10 +104,13 @@ section#productHelp.section-article.container-gray-11.container-image--center da
           = partial "partials/snippets/button", :locals => { :label => "Schedule a demo today", :url => "/demo", :button_classes => "button expanded group--sm", :icon => "icon-event-check", :icon_color => "white", :icon_align => "left" }
           = partial "partials/snippets/button", :locals => { :label => "Questions? Let's talk.", :url => "/contact", :button_classes => "button expanded hollow hollow-inverted", :icon => "hubspot-chat-blue", :icon_align => "left" }
 
-/ modal for form, hidden
+/ modal for form, hidden. form_id at the top
 .card.drop.medium.reveal#requestFeature data-options=("closeOnEsc: true; animationSpeed: 150; animationIn: bounce-in") data-reveal=""
   .card-section
     h2.headline-3 Request a feature
     p We're always looking for new ideas or use cases.
+    - if data.site.forms.has_key?(form_id)
+      - the_form = data.site.forms[form_id]
+      = Kramdown::Document.new(the_form["custom_form"]).to_html
     button.close-button aria-label=("Close panel") data-close="" type="button"
       span aria-hidden="true" ×
