--- a/source/platform/_features.html.slim
+++ b/source/platform/_features.html.slim
@@ -27,7 +27,12 @@ section#tech-features.section-article.container-gray-11.container-image--fixed(d
       .row.align-center
         .columns.small-12.medium-8
           h1.headline-2.text-center Datica Platform Features
-          p.text-center Features that not only show you how to be compliant, but actually make you compliant against the healthcare's most stringent security requirements.
+          p.text-center Features that not only show you how to be compliant, but actually <em>make you</em> compliant against the healthcare's most stringent security requirements.
+
+          .menu.button-cluster.align-center
+            = partial "partials/snippets/button", :locals => { :label => "See our Roadmap", :title => "View Platform pricing", :url => "roadmap", :button_classes => "button hollow", :item_id => "cta_top_pricing", :icon => "icon-map" }
+            = partial "partials/snippets/button", :locals => { :label => "Explore Compliance", :title => "Explore Compliance", :url => "/platform/compliance", :button_classes => "button button--light", :icon => "icon-shield-solid-small", :item_id => "top-tech" }
+
   - ordered_feature_categories = data.site.featureCategories.to_a.sort_by{ |id, featureCat| featureCat['sort_order'] }
   - ordered_feature_categories.each do | id, featureCat |
     .row
