Moving category into keyword tag list at card bottom. harder than I thought. Minor tweak to span.labels in a row.

--- a/source/assets/scss/modules/components.scss
+++ b/source/assets/scss/modules/components.scss
@@ -50,6 +50,9 @@ blockquote + .media-object, .blockquote-info { // line person/info up with quote
         background-color: $color_green;
     }
 }
+span.label + span.label { // when in a tag list
+    margin-left: 0.4em;
+}
 // Pills are functionally identical to "labels". We should unify these two someday. - AW
 .pill {
     display: inline-block;
