--- a/source/platform/roadmap.html.slim
+++ b/source/platform/roadmap.html.slim
@@ -1,6 +1,6 @@
 ---
 title: "Datica Public Roadmap"
-summary: "Datica Public Roadmap."
+summary: "A window into Datica product development."
 navTitle: "Roadmap"
 author: "Datica, Inc."
 tags: "compliance, HIPAA, HL7, FHIR, interoperability, EHR, integration"
@@ -27,12 +27,10 @@ svg aria-hidden="true" data-name="chevron" style=("position: absolute; width: 0;
       path d=("M4.29 5.19L2.83 6.64 9 12.81l6.17-6.17-1.46-1.45L9 9.9z")
 
 section#tech-features.section-article.container-gray-11
-  .row.align-center
-    .columns.small-12.text-center.group
-      .row.align-center
-        .columns.small-12.medium-8
-          h1.headline-2.text-center = current_page.data.title
-          p.text-center Here's what's coming.
+  .row.align-center.group
+    .columns.small-12.medium-8.text-center
+      h1.headline-2 = current_page.data.title
+      p.text-center = current_page.data.summary
           / p= the_form.title
   .row.align-center.small-up-1.medium-up-3.large-up-3
     - feature_states.each do | state |
@@ -58,22 +56,30 @@ section#tech-features.section-article.container-gray-11
                   - if feature.has_key?("desc")
                     .show-more--container.text-smaller data-off-canvas="" data-toggler="" id="feature-detail_#{feature.slug}"
                       = Kramdown::Document.new(feature.desc).to_html
-                - if feature.has_key?("related_tags")
+                / - ugh. Refactor and resubmit Allan. Bolting categories into this list of tags isn't clean.
+                - if feature.has_key?("related_tags") || feature.has_key?("category")
                   .card-divider.card-divider--flush
                     span.text--gray-9
                       = inline_svg("small/icon-tag", class: "icon-inline")
                       | &nbsp;
-                    - feature["related_tags"].each do |tag|
-                      - if tag.has_key?("tag_full")
-                        // create this map for any colors wanted for tags. current list - settings.scss:198
-                        - tag_color = case tag.slug
-                        - when "kubernetes" then "primary"
-                        - when "add-ons" then "info"
-                        - when "foo" then "success"
-                        - when "bar" then "warning"
-                        - when "baz" then "info"
-                        - else "dark"
-                        span.label.round class=tag_color = tag.slug
+                    - if feature.has_key?('category')
+                      - tag_color = case feature.category
+                      - when "Kubernetes" then "success"
+                      - when "Core Compliance" then "primary"
+                      - else "info"
+                      span.label.round class=tag_color = feature.category
+                    - if feature.has_key?("related_tags")
+                      - feature["related_tags"].each do |tag|
+                        - if tag.has_key?("tag_full")
+                          // create this map for any colors wanted for tags. current list - settings.scss:198
+                          - tag_color = case tag.slug
+                          - when "kubernetes" then "primary"
+                          - when "add-ons" then "info"
+                          - when "foo" then "success"
+                          - when "bar" then "warning"
+                          - when "baz" then "info"
+                          - else "dark"
+                          span.label.round class=tag_color = tag.slug
 
 section#productHelp.section-article.container-gray-11.container-image--center data-interchange="[https://images.ctfassets.net/189dvqdsjh46/6h7kOzKimkGoI40KASuu4Q/25b6bb4c6ce6a5c014bf16c906471baf/hiker_silhouette_-_julentto-photography-184055.jpg?fit=thumb&w=1600&h=500, medium]"
   .row.align-center
